<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_current_beacon"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMajor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_major"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMinor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_minor"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="---"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvDistance"
        android:layout_centerHorizontal="true"
        android:text="@string/details_filtered_parameter"
        android:textColor="#ffffff"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvStateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDistance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/details_region"
        android:textColor="#ffffff"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStateInfo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/state_far"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/etLowerThreshold"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:inputType="numberDecimal"
            android:textColor="#ffffff" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/etLowerThreshold" />

        <EditText
            android:id="@+id/etHigherThreshold"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/vDivider"
            android:inputType="numberDecimal"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/etLowerThreshold"
            android:text="@string/details_lower"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/etHigherThreshold"
            android:layout_toRightOf="@id/vDivider"
            android:text="@string/details_higher"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>
