<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.surecase.co.ibeaconapp.ibeaconapp.example.ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="#666666">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:text="@string/settings_boot"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:id="@+id/white1"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#ffffff" />

        <View
            android:id="@+id/gray1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/white1"
            android:background="#999999" />

        <CheckBox
            android:id="@+id/cbBoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="#666666">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:text="@string/settings_background"
            android:textColor="#ffffff"
            android:textSize="19sp" />

        <View
            android:id="@+id/white2"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#ffffff" />

        <View
            android:id="@+id/gray2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/white2"
            android:background="#999999" />

        <CheckBox
            android:id="@+id/cbBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="#666666">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:text="@string/settings_ble_notify"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:id="@+id/white3"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#ffffff" />

        <View
            android:id="@+id/gray3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/white3"
            android:background="#999999" />

        <CheckBox
            android:id="@+id/cbBLEnotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp" />

    </RelativeLayout>

</LinearLayout>
